<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">Android Store</string>
    <string name="bienvenido">Bienvenidos a la</string>
    <string name="acceder_al_catalogo">Acceder al catálogo</string>
    <string name="AnadirCarrito">Añadir al carrito</string>
    <string name="SeguirComprando">Seguir comprando</string>
    <string name="CarritoCompra">Carrito compra</string>
    <string name="UnidadesAlCarrito">unidades anadidas al carrito</string>
    <string name="ErrorSeleccionaProducto">Error al seleccionar el producto</string>
    <string name="MinimoUnidad">Mínimo debe indicar una unidad</string>
    <string name="NoHayProductos">No hay productos en el carrito de la compra</string>
    <string name="PedidoInsertado">Su pedido se ha insertado\nGracias por su compra</string>
    <string name="ErrorConectaServidor">Error al conectar con el servidor</string>
    <string name="ResumenCompra">Resumen de su compra</string>
    <string name="AnadirMasProductos">Añadir más productos</string>
    <string name="MisDatos">Mis datos</string>
    <string name="Nombre">Nombre</string>
    <string name="Email">Email</string>
    <string name="Telefono">Teléfono</string>
    <string name="Observaciones">Observaciones</string>
    <string name="EnviarPedido">Enviar</string>
    <string name="actualizar_catalogo">Actualizar catálogo</string>
    <string name="PulseActualizarCatalogo">Pulse en el botón Actualizar catálogo</string>
    <string name="copyright">Desarrollado por Joserra bajo licencia Academic Free Licence v3.0 joserracj@gmail.com\n\nRediseñado y reprogramador por Pedro Joya Máñez para el IES Saladillo</string>
    <string name="salir">Salir</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="importar_catalogo">Importar catálogo</string>
    <string name="iniciando">Iniciando...</string>
    <string name="leyendo_respuesta">Leyendo respuesta</string>
    <string name="respuesta_obtenida">Respuesta obtenida</string>
    <string name="procesando_respuesta">Procesando respuesta</string>
    <string name="sin_conexion_a_internet">Sin conexión a Internet</string>
    <string name="se_ha_solicitado_un_campo_desconocido">Se ha solicitado un campo desconocido</string>
    <string name="uri_desconocida">"URI desconocida: "</string>
    <string name="productos">productos</string>
    <string name="catalogo_actualizado_con">"Catálogo actualizado con "</string>
    <string name="foto">foto</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="producto_no_encontrado">Producto no encontrado</string>
    <string name="catalogo_de_productos">Catálogo de productos</string>
    <string name="ficha_del_producto">Ficha del producto</string>
    <string name="carrito_de_la_compra">Carrito</string>
    <string name="pedido">Pedido</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="ver_carrito">Ver carrito</string>
    <string name="volver_al_catalogo">Volver al catálogo</string>
    <string name="foto_del_producto">Foto del producto</string>
    <string name="agregado_al_carrito_una_unidad_del_producto">Agregado al carrito una unidad del producto</string>
    <string name="logo">Logo</string>
    <string name="unidades_pedidas">"Unidades pedidas: "</string>
    <string name="catalogo">Catálogo</string>
    <string name="no_hay_ningun_producto_en_el_carrito">No hay ningún producto en el carrito\nPulse para ver el catálogo</string>
    <string name="no_hay_ningun_producto_en_el_catalogo">No hay ningún producto en el catálogo\nPulse para actualizarlo</string>
    <string name="hacer_pedido">Hacer pedido</string>
    <string name="direccion">Dirección</string>
    <string name="e_mail">e-mail</string>
    <string name="enviar">Enviar</string>
    <string name="el_pedido_se_ha_realizado_correctamente">El pedido se ha realizado correctamente</string>
    <string name="no_se_ha_podido_realizar_el_pedido">No se ha podido realizar el pedido</string>
    <string name="quitar_del_carrito">Quitar del carrito</string>
    <string name="seleccionados">" seleccionados"</string>
    
</resources>