<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_aplicacion" >

    <TextView
        android:id="@+id/textView1"
        android:text="@string/ResumenCompra"
        style="@style/FichasTitulo" />

    <TextView
        android:id="@+id/resumenDetalle"
        android:text="@string/ResumenCompra"
        style="@style/ResDetalle" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <TableRow >

            <Button
                android:id="@+id/anadirMasProductos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AnadirMasProductos"
                style="@style/CKButton" />

            <Button
                android:id="@+id/anadirObservaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MisDatos"
                style="@style/CKButton" />
        </TableRow>
    </TableLayout>

</RelativeLayout>