<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo_aplicacion"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblBienvenido"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#d7d6d6"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:textSize="25sp"
        android:text="@string/bienvenido" />

    <TextView
        android:id="@+id/lblNombreTienda"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/lblBienvenido"
        android:textSize="40sp"
        android:text="@string/app_name" />
    
    <TextView
        android:id="@+id/btnAcceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableTop="@drawable/ic_iconopp"
        android:drawablePadding="15dp"
        android:onClick="btnAccederOnClick"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:text="@string/acceder_al_catalogo" />

</RelativeLayout>